<resources>
    <string name="app_name">Quizzer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Creation Quiz -->
    <string name="titre">Titre</string>
    <string name="hintTitre">Quiz sur les fruits</string>
    <string name="question">Question</string>
    <string name="hintQuestion">Quel est la couleur de ce fruit?</string>
    <string name="choix">Choix</string>
    <string name="hintChoix">Jaune</string>
    <string name="reponse">Réponses</string>
    <string name="hintReponse">Reponse:Choix,Reponse:Choix,...</string>
    <string name="hint">Séparer les réponses par une virgule</string>
    <string name="creer">Créer</string>
    <string name="newQuiz">Créer un nouveau quiz</string>

    <!-- Menu Principal -->
    <string name="bonjour">Bonjour, </string>
    <string name="nouveauQuiz">Créer nouveau quiz</string>
    <string name="listeQuiz">Voir la liste de mes quiz</string>
    <string name="rejoindreQuiz">Inviter à mon quiz</string>
    <string name="scoreBtn">Voir mes points</string>
    <string name="logout">Déconnecter</string>

    <!-- Login -->
    <string name="username">Nom d\'utilisateur</string>
    <string name="mdp">Mot de Passe</string>
    <string name="register">Vous n\'avez pas un compte? Appuyez ici</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="login">Connexion</string>

    <!-- Quiz -->
    <string name="score">Score: 0</string>
    <string name="quitter">Quitter</string>

    <!-- Registration -->
    <string name="newCompte">Créer un nouveau compte</string>
    <string name="email">Adresse courriel</string>
    <string name="confirmerMDP">Confirmer Mot de Passe</string>
    <string name="compteExistant">Avez-vous déjà un compte? Cliquez ici</string>

    <string name="ajouter">Ajouter</string>

    <!-- Alerte -->
    <string name="internet">Pas d\'internet</string>
    <string name="listequizTitre">Aucun Quiz</string>
    <string name="contenuAlerteListe">Vous devez soit créer un quiz sinon vous faire inviter à un quiz par quelqu\'un qui a déjà créé un quiz</string>
    <string name="retourMenu">Please return to the menu</string>
    <string name="aucunInvitation">Vous devez créer un quiz pour pouvoir inviter quelqu\'un</string>
</resources>